Fixed the overlapping copyright text.

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -21,7 +21,7 @@ h1{
   background-color:#f7f7f7;
   max-width: 1000px;
   margin: auto;
-  height: 100vh;
+  height: 150vh;
   border: 2px solid #f7f7f7;
   border-radius: 25px;
   overflow: hidden;
@@ -57,8 +57,9 @@ body{
       }
 
 #copyright {
-  position: absolute;
+  position: relative;
   width: 1000px;
   text-align: center;
   bottom: 20px;
+  margin-top:60px;
 }
